developer/src/kmc-package/test/fixtures/invalid/keyman.exe
This is a dummy file for testing the unit tests